backend/broz-infra/k8s/broz-system/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: broz-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: broz-data
---
apiVersion: v1
kind: Namespace
metadata:
  name: broz-app
---
apiVersion: v1
kind: Namespace
metadata:
  name: broz-frontend
---
apiVersion: v1
kind: Namespace
metadata:
  name: broz-monitoring
